@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.10.0.0'
     implementation 'org.springframework:spring-beans:5.3.28'
     implementation 'org.springframework:spring-jdbc:5.3.28'
 
